# unitec-sales-manager

./: LICENSE  README.md
backend/: .env.example  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
backend/src/: manage.py
backend/src/auth/: urls.py  views.py
backend/src/clients/: models.py  serializers.py  urls.py  views.py
backend/src/clients/migrations/: 0001_initial.py
backend/src/manager/: settings.py  urls.py  wsgi.py
backend/src/manager/settings/: __init__.py  base.py  dev.py  prod.py
backend/src/orders/: models.py  serializers.py  urls.py  views.py
backend/src/orders/migrations/: 0001_initial.py
backend/src/products/: models.py  serializers.py  urls.py  views.py
backend/src/products/migrations/: 0001_initial.py
backend/src/shared/: models.py
backend/src/users/: serializers.py  urls.py  views.py
frontend/src/: App.jsx
frontend/src/components/Auth/: Login.jsx
frontend/src/components/inventory/: ItemModal.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/data/: mockData.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/views/: Dashboard.jsx  InventoryList.jsx  LoginView.jsx
